<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/layout_background"
    android:gravity="center"
    >

    <TextView
        android:id="@+id/text_IBM"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:text="IBM"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30dp"
        >
    </TextView>

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:backgroundTint="@color/card_background"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        >

        <TextView
            android:layout_width="289dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:hint="@string/text_view_weight"
            android:padding="4dp"
            android:textColorHint="@color/white"
            android:textSize="25dp">

        </TextView>

        <EditText
            android:id="@+id/edit_text_weight"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="25dp"
            android:hint="@string/edit_text_hint_weight"
            android:paddingTop="80dp"
            android:textColorHint="@color/text_hint"
            android:textSize="50dp"
            android:inputType="numberDecimal"
            />

        <TextView
            android:layout_width="286dp"
            android:layout_height="match_parent"
            android:layout_marginRight="45dp"
            android:layout_marginBottom="15dp"
            android:gravity="right|bottom"
            android:hint="Kg"
            android:padding="30dp"
            android:textColorHint="@color/white"
            android:textSize="30dp"
            >
        </TextView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="200dp"
        app:cardBackgroundColor="@color/card_background"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="10dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:hint="@string/text_view_height"
            android:padding="4dp"
            android:textColorHint="@color/white"
            android:textSize="25dp">
        </TextView>

        <EditText
            android:id="@+id/edit_text_height"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="25dp"
            android:hint="@string/edit_text_hint_height"
            android:paddingTop="80dp"
            android:textColorHint="@color/text_hint"
            android:textSize="50dp"
            android:inputType="numberDecimal"
            />

        <TextView
            android:layout_width="288dp"
            android:layout_height="match_parent"
            android:layout_marginRight="45dp"
            android:gravity="right|bottom"
            android:hint="@string/text_view_hint_cm"
            android:padding="25dp"
            android:textColorHint="@color/white"
            android:textSize="30dp"
            >
        </TextView>

    </androidx.cardview.widget.CardView>

    <Button
        android:textColorHint="@color/white"
        android:hint="@string/btn_hint"
        android:id="@+id/button_calculate"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btn_background"
        >
    </Button>

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/card_background"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            >

            <TextView
                android:id="@+id/text_view_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="30dp"></TextView>

            <TextView
                android:id="@+id/text_view_ibm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColorHint="@color/white"
                android:textSize="25dp">
            </TextView>

            <TextView
                android:id="@+id/text_view_sugest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/text_hint"
                android:textSize="15dp"
                >
            </TextView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>